--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -7,7 +7,7 @@
     <body>
         <ul>
         {{#each items }}
-            <li>{{this.Player}} | {{this.Yds}} | {{this.yds}}</li>
+            <li>{{this.player}} | {{this.yds}}</li>
         {{/each}}
         </ul>
     </body>
