--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -9,11 +9,13 @@
             <tr>
                 <th>Player</th>
                 <th>Yds</th>
+                <th>TD</th>
             </tr>
             {{#each items }}
             <tr>
                 <td>{{this.player}}</td>
                 <td>{{this.yds}}</td>
+                <td>{{this.td}}
             </tr>
             {{/each}}
         </table>
