--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -10,12 +10,14 @@
                 <th>Player</th>
                 <th>Yds</th>
                 <th>TD</th>
+                <th>Lng</th>
             </tr>
             {{#each items }}
             <tr>
                 <td>{{this.player}}</td>
                 <td>{{this.yds}}</td>
-                <td>{{this.td}}
+                <td>{{this.td}}</td>
+                <td>{{this.lng}}</td>
             </tr>
             {{/each}}
         </table>
