Update template to sortBy Yds on click

--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -18,7 +18,9 @@
             <table>
                 <tr>
                     <th>Player</th>
-                    <th>Yds</th>
+                    <th>
+                        <a href="?sortBy=yds" >Yds</a>
+                    </th>
                     <th>TD</th>
                     <th>Lng</th>
                 </tr>
