Add routes for csv and json formats; add CSV and JSON downloads

--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -16,6 +16,9 @@
         </div>
         <div>
             <a href="../players">Clear</a>
+            <a href="{{ links.formats.json.href }}" download="player-stats.json">JSON</a>
+            <a href="{{ links.formats.csv.href }}" download="player-stats.csv">CSV</a>
+
         </div>
         <div>
             <table>
